--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,7 @@
-VITE_SERVER_REGISTER_URL=http://http://localhost:3000/auth/register
-VITE_SERVER_LOGIN_URL=http://http://localhost:3000/auth/login
+VITE_SERVER_URL=http://localhost:3000
+
+VITE_SERVER_REGISTER_URL=http://localhost:3000/auth/register
+VITE_SERVER_LOGIN_URL=http://localhost:3000/auth/login
 
 VITE_SERVER_TOURNAMENTS_API=http://localhost:3000/tournaments
 
