refactor: Shifted Google OAuth Client ID to .env

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
+VITE_SERVER_GOOGLE_OAUTH_CLIENT_ID=602398596216-q2tam15id5a3e0835kpmavpp8bcj9un5.apps.googleusercontent.com
+
 VITE_SERVER_URL=http://localhost:3000
 
 VITE_SERVER_REGISTER_URL=http://localhost:3000/auth/register
