--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "socket.io": "^4.7.4"
