--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
+    "redis": "^4.6.14",
     "socket.io": "^4.7.4"
   }
 }
