--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
