--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,11 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.14.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.4",
+    "styled-components": "^6.1.11",
     "swiper": "^11.0.5",
     "yup": "^1.3.3"
   },
