refactor: convert colorPicker to typescript

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.5",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/randomcolor": "^0.5.9",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "randomcolor": "^0.6.2",
