--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
+    "@types/mongoose": "^5.11.96",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
