--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
+    "nodemon": "^3.1.9",
     "redis": "^4.6.14",
     "socket.io": "^4.7.5"
   }
