--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/randomcolor": "^0.5.9",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
+    "motion": "^11.18.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
